Fix overlapping layout and responsive issues

--- a/sec1.css
+++ b/sec1.css
@@ -164,7 +164,7 @@ h1{
         margin-top: 100px;
     }
     .sec-1-2-1{
-    margin-top:40px;
+    margin-top:60px;
     font-size: 15px;
     }
     .menu-bar{
@@ -172,7 +172,7 @@ h1{
 
     }
     h1{
-        margin-top: 60px;
+        margin-top: 80px;
         font-size:25px;
     }
     .btns{
